--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,7 @@
 }
 @font-face {
 	font-family: 'Material Icons';
+	font-size: 0.8rem;
 	font-style: normal;
 	font-weight: 400;
 	src: url(https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
@@ -62,3 +63,17 @@
 }
 
 
+.icon{
+	font-size:1.5rem ;
+	color:#dc3545;
+	width: 1em;
+	height: 1em;
+	display: inline-block;
+	transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+	flex-shrink: 0;
+	user-select: none;
+	
+ }
+ [class*=MuiTypography-body]{
+	 font-size: 0.875rem !important;
+ }
