--- a/src/App.scss
+++ b/src/App.scss
@@ -74,6 +74,17 @@
 	user-select: none;
 	
  }
+ .iconWhite{
+	font-size:1.5rem ;
+	color:white;
+	width: 1em;
+	height: 1em;
+	display: inline-block;
+	transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+	flex-shrink: 0;
+	user-select: none;
+	
+ }
  [class*=MuiTypography-body]{
 	 font-size: 0.875rem !important;
  }
