--- a/src/App.scss
+++ b/src/App.scss
@@ -60,7 +60,7 @@
     white-space: nowrap;
     word-wrap: normal;
     direction: ltr;
-    -webkit-font-feature-settings: 'liga';
+    // -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
 }
 
@@ -117,4 +117,12 @@
 
 .ImageViewerField:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+.gridPdf {
+    display: flex;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    ;
 }
