--- a/src/App.scss
+++ b/src/App.scss
@@ -126,3 +126,8 @@
     margin-bottom: 6px;
     ;
 }
+.MuiDialog-paperScrollPaper{
+    max-height:calc(100vh - 64px);
+    min-height:calc(100vh - 200px);
+
+}
