--- a/src/App.scss
+++ b/src/App.scss
@@ -1,133 +1,153 @@
-@import './variables.scss';
-@import '~bootstrap/scss/bootstrap.scss';
+@import "./variables.scss";
+@import "~bootstrap/scss/bootstrap.scss";
 
 .App {
-    text-align: center;
+  text-align: center;
 }
 
 .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 40vmin;
-    pointer-events: none;
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 .App-header {
-    background-color: $background-corporate;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  background-color: $background-corporate;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
-    color: $link-color;
+  color: $link-color;
 }
 
 @keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
 
-    to {
-        transform: rotate(360deg);
-    }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.ListTable-striped tbody>tr:nth-child(even) {
-    background-color: $stripedTableColor;
+.ListTable-striped tbody > tr:nth-child(even) {
+  background-color: $stripedTableColor;
 }
 
 @font-face {
-    font-family: 'Material Icons';
-    font-size: 0.8rem;
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
+  font-family: "Material Icons";
+  font-size: 0.8rem;
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2)
+    format("woff2");
 }
 
 .material-icons {
-    font-family: 'Material Icons';
-    font-weight: normal;
-    font-style: normal;
-    font-size: 24px;
-    line-height: 1;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    white-space: nowrap;
-    word-wrap: normal;
-    direction: ltr;
-    // -webkit-font-feature-settings: 'liga';
-    -webkit-font-smoothing: antialiased;
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  // -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
 }
 
 .icon {
-    font-size: 1.5rem;
-    color: #dc3545;
-    width: 1em;
-    height: 1em;
-    display: inline-block;
-    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    flex-shrink: 0;
-    user-select: none;
+  font-size: 1.5rem;
+  color: #dc3545;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  flex-shrink: 0;
+  user-select: none;
 }
 
 .iconWhite {
-    font-size: 1.5rem;
-    color: white;
-    width: 1em;
-    height: 1em;
-    display: inline-block;
-    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    flex-shrink: 0;
-    user-select: none;
+  font-size: 1.5rem;
+  color: white;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  flex-shrink: 0;
+  user-select: none;
 }
 
-[class*=MuiTypography-body] {
-    font-size: 0.875rem !important;
+[class*="MuiTypography-body"] {
+  font-size: 0.875rem !important;
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .column16 {
-    width: 16.6%;
+  width: 16.6%;
 }
 
 .gridImages {
-    display: flex;
-    box-sizing: border-box;
-
+  display: flex;
+  box-sizing: border-box;
 }
 
 .ImageViewerField {
-    border: 1px solid #ddd;
-    /* Gray border */
-    border-radius: 4px;
-    /* Rounded border */
-    padding: 5px;
-    /* Some padding */
-    width: 120px;
-    /* Set a small width */
+  border: 1px solid #ddd;
+  /* Gray border */
+  border-radius: 4px;
+  /* Rounded border */
+  padding: 5px;
+  /* Some padding */
+  width: 120px;
+  /* Set a small width */
 }
 
 .ImageViewerField:hover {
-    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
 .gridPdf {
-    display: flex;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 6px;
-    ;
+  display: flex;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
-.MuiDialog-paperScrollPaper{
-    max-height:calc(100vh - 64px);
-    min-height:calc(100vh - 200px);
-
+.MuiDialog-paperScrollPaper {
+  max-height: calc(100vh - 64px);
+  min-height: calc(100vh - 200px);
+}
+.TextInput {
+  width: 500px !important;
+}
+.SelectInput {
+  width: 500px !important;
+}
+.inputLocation {
+  display: inline-block;
+  height: 70px;
+}
+.inputsLocationMap {
+  display: grid;
+  margin-top: 20px;
+}
+.AutocompleteDiv {
+  display: flex;
+  width: 100%;
+}
+.buttonMyLocation {
+  height: 35px;
+  margin-left: 20px !important;
 }
